測地系変換を実装。合わせてGoogleMAP表示用のjsonデータ作成ロジックをリファクタリング

--- a/plugins/lgdis/Gemfile
+++ b/plugins/lgdis/Gemfile
@@ -50,3 +50,6 @@ gem 'omniauth-oauth2', '1.0.0' # for facebook
 gem 'omniauth-saml', '1.0.0', :git => 'git://github.com/ruvr/omniauth-saml.git'
 gem 'omniauth-twitter', '0.0.9'
 gem 'omniauth-facebook', '1.2.0'
+
+# jpmobile is Rails plugin for Japanese mobile-phones.
+gem 'jpmobile', '3.0.7'
