migrate出来ない問題を解決

--- a/plugins/lgdis/config/api_key.yml
+++ b/plugins/lgdis/config/api_key.yml
@@ -10,3 +10,10 @@ facebook:
   app_token: "362679870488301|QajA91l689qECcenIGevONltIjo"
   user_id: "100004580826412"
 
+# OpenAM(SAML) define
+openam:
+  assertion_consumer_service_url: "http://vmhost.example.com:3000/auth/openam/callback"
+  issuer: "http://vmhost.example.com:3000/"
+  idp_sso_target_url: "http://app.isk.local:8080/openam/SSORedirect/metaAlias/idp"
+  idp_cert_fingerprint: "DE:XX:...EE:33"
+  name_identifier_format: "urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddres"
