--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -12,10 +12,6 @@ delivery_job_class:
   - &delivery_job_class_4 "ExtOut::FacebookRequestJob"
   - &delivery_job_class_5 "ExtOut::AtomRequestJob"
 
-add_url_type:
-  - &add_url_type_1 disaster_portal
-  - &add_url_type_2 lgdsf
-
 to: # 配送先メールアドレス、メーリングリスト
   - &to_err apl@localhost.localdomain # Resqueジョブエラー通知
   - &to_1   apl@localhost.localdomain # 自治体職員向けメール（０号配備）
@@ -2740,6 +2736,13 @@ destination_xpath:
   65: 'pcx_gi:GeneralInformation'      # ボランティア活動をしたい方への情報
   66: 'pcx_gi:GeneralInformation'      # 営業店舗に関する情報
 
+# ** 号配備 delivery_place id
+email_deployed:
+  2: true
+  3: true
+  4: true
+  5: true
+
 commons_xml_field:
   namespace_start_tag: <body_namespace xmlns:pcx_di="http://xml.publiccommons.ne.jp/pcxml1/body/DamageInformation3" xmlns:pcx_en="http://xml.publiccommons.ne.jp/pcxml1/body/event3" xmlns:pcx_sh="http://xml.publiccommons.ne.jp/pcxml1/body/shelter3" xmlns:pcx_um="http://xml.publiccommons.ne.jp/pcxml1/body/UrgentMail3" xmlns:pcx_ev="http://xml.publiccommons.ne.jp/pcxml1/body/evacuation3" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:edxlde="urn:oasis:names:tc:emergency:EDXL:DE:1.0" xmlns:commons="http://xml.publiccommons.ne.jp/xml/edxl/" xmlns:pcxml="http://xml.publiccommons.ne.jp/pcxml1/3" xmlns:pcx_eb="http://xml.publiccommons.ne.jp/pcxml1/elementBasis3/" xmlns:pcx_ib="http://xml.publiccommons.ne.jp/pcxml1/informationBasis3/" xmlns:pcx_gi="http://xml.publiccommons.ne.jp/pcxml1/body/GeneralInformation3" xmlns:pcx_ah="http://xml.publiccommons.ne.jp/pcxml1/body/AntidisasterHeadquarter3">
   namespace_end_tag: </body_namespace>
@@ -2804,10 +2807,10 @@ atom:
   output_dir: ./public/atom
 
 # 災害情報ポータルURL
-disaster_portal_url: http://www.jice.or.jp/sinsai/sinsai_result.php
+disaster_portal_url: '下記リンクより、災害情報を確認して下さい。' + "\n" + http://www.jice.or.jp/sinsai/sinsai_result.php
 
 # LGDSF URL
-lgdsf_url: http://203.138.187.88/lgdsf/staffs/send/
+lgdsf_url: '下記リンクより、位置情報、参集場所の報告を行ってください。' + "\n" + http://203.138.187.89/LGDSF/staffs/send
 
 # 外部出力
 ext_out:
