--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -137,6 +137,7 @@ delivery_place:
     delivery_job_class: *delivery_job_class_1
     add_url_type:       *add_url_type_1
 
+# 自動配信時先リスト
 # 記載例
 # auto_destination:
 #   *号配備番号:
@@ -147,12 +148,20 @@ delivery_place:
 auto_destination:
   0:  # ０号配備
     - *smtp_0
+    - *twitter
+    - *facebook
   1:  # １号配備
     - *smtp_1
+    - *twitter
+    - *facebook
   2:  # ２号配備
     - *smtp_2
+    - *twitter
+    - *facebook
   3:  # ３号配備
     - *smtp_3
+    - *twitter
+    - *facebook
 
 # 配信許可権限者ID
 dst_admin_id:
