--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -2916,8 +2916,8 @@ commons_xml_field:
   edxl_status:  # 運用種別
     3: System   # 通信試験モード
     2: Exercise # 災害訓練モード
-#  editorial_office: 石巻市総務部防災対策課 # 作成部署情報(部署名)
-#  pulishing_office: 石巻市総務部防災対策課 # 発表部署情報(部署名)
+  editorial_office: 石巻市総務部防災対策課 # 作成部署情報(部署名)
+  pulishing_office: 石巻市総務部防災対策課 # 発表部署情報(部署名)
   contact_type: 09012345678                # 発表部署情報(電話番号)
   area_name: 石巻市                        # 事象の起きた場所
 
