--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -2747,13 +2747,13 @@ tracker_grouping:
     - 被災者支援
   54: # 学校・幼稚園・保育所に関する情報
     - 生活情報
-    - 福祉・教育・保育所
+    - 福祉・教育・保育
   55: # 給水に関する情報
     - ライフライン
     - 給水
   56: # 健康・福祉・介護に関する情報
     - 生活情報
-    - 福祉・教育・保育所
+    - 福祉・教育・保育
   57: # 環境に関する情報
     - 生活情報
     - 環境
@@ -2802,6 +2802,7 @@ ugent_mail_ids:
   - 10
   - 11
   - 12
+
 general_info_ids:
   - 20 # 道路通行規制に関する情報
   - 21 # 道路渋滞に関する情報
@@ -2833,6 +2834,31 @@ general_info_ids:
   - 73 # 航空路の運行に関する情報
   - 74 # 船舶路の運行に関する情報
   - 75 # その他公共交通の運行に関する情報
+
+# ComplementaryInfo(補足情報)に設定が必要なトラッカーID
+# 避難勧告・指示、避難所情報、被害情報 のトラッカーID の配列
+comp_info_trackers:
+  - 1  # 避難勧告・指示
+  - 2  # 避難所情報
+  - 7  # 人的被害報告
+  - 8  # 住家建物被害報告
+  - 9  # 道路被害報告
+  - 10 # 橋梁被害報告
+  - 11 # 上水道被害報告
+  - 12 # 下水道被害報告
+  - 13 # ガス設備被害報告
+  - 14 # 通信網被害報告
+  - 15 # その他被害報告
+  - 18 # 被害要約報告(状況)
+  - 33 # 非住家建物被害報告
+  - 34 # 高等学校被害報告
+  - 35 # 中学校被害報告
+  - 36 # 小学校被害報告
+  - 37 # 幼稚園被害報告
+  - 38 # 保育所被害報告
+  - 39 # 災害弱者関連施設被害報告
+  - 40 # 医療施設被害報告
+  - 41 # 災害重要施設被害報告
 
 commons_delivery_ids:
   - 1  # 公共情報コモンズ
@@ -2895,6 +2921,32 @@ destination_xpath:
   65: 'pcx_gi:GeneralInformation'      # ボランティア活動をしたい方への情報
   66: 'pcx_gi:GeneralInformation'      # 営業店舗に関する情報
 
+# ComplementaryInfo(補足情報)設定時xpath
+# 避難勧告・指示、避難所情報、被害情報 時のみ設定
+comp_info_xpath:
+  1: 'pcx_ev:ComplementaryInfo'  # 避難勧告・指示
+  2: 'pcx_sh:ComplementaryInfo'  # 避難所情報
+  7: 'pcx_di:ComplementaryInfo'  # 人的被害報告
+  8: 'pcx_di:ComplementaryInfo'  # 住家建物被害報告
+  9: 'pcx_di:ComplementaryInfo'  # 道路被害報告
+  10: 'pcx_di:ComplementaryInfo' # 橋梁被害報告
+  11: 'pcx_di:ComplementaryInfo' # 上水道被害報告
+  12: 'pcx_di:ComplementaryInfo' # 下水道被害報告
+  13: 'pcx_di:ComplementaryInfo' # ガス設備被害報告
+  14: 'pcx_di:ComplementaryInfo' # 通信網被害報告
+  15: 'pcx_di:ComplementaryInfo' # その他被害報告
+  17: 'pcx_di:ComplementaryInfo' # 被害要約報告(概況)
+  18: 'pcx_di:ComplementaryInfo' # 被害要約報告(状況)
+  33: 'pcx_di:ComplementaryInfo' # 非住家建物被害報告
+  34: 'pcx_di:ComplementaryInfo' # 高等学校被害報告
+  35: 'pcx_di:ComplementaryInfo' # 中学校被害報告
+  36: 'pcx_di:ComplementaryInfo' # 小学校被害報告
+  37: 'pcx_di:ComplementaryInfo' # 幼稚園被害報告
+  38: 'pcx_di:ComplementaryInfo' # 保育所被害報告
+  39: 'pcx_di:ComplementaryInfo' # 災害弱者関連施設被害報告
+  40: 'pcx_di:ComplementaryInfo' # 医療施設被害報告
+  41: 'pcx_di:ComplementaryInfo' # 災害重要施設被害報告
+
 # ** 号配備 delivery_place id
 email_deployed:
   2: true
@@ -2914,10 +2966,12 @@ commons_xml_field:
   edxl_status:  # 運用種別
     3: System   # 通信試験モード
     2: Exercise # 災害訓練モード
-  editorial_office: 石巻市総務部防災対策課 # 作成部署情報(部署名)
+  editorial_office: 石巻市総務部防災対策課  # 作成部署情報(部署名)
   publishing_office: 石巻市総務部防災対策課 # 発表部署情報(部署名)
-  contact_type: 09012345678                # 発表部署情報(電話番号)
-  area_name: 石巻市                        # 事象の起きた場所
+  contact_type: 09012345678                 # 発表部署情報(電話番号)
+  area_name: 石巻市                         # 事象の起きた場所
+  organization_code: 042021                 # 作成部署情報(組織コード)
+  organization_name: 石巻市                 # 作成部署情報(組織名)
 
 # 配信要求ステータス定義
 status:
@@ -2932,15 +2986,17 @@ cf_id_for_show_status: 999
 
 # 配信内容にあたるカスタムフィールドID
 custom_field_delivery:
-  corrected: 2      # 情報の取消時又は訂正時の説明文
-  summary: 4        # 見出し文(要約)
-  published_date: 8 # 情報の発表日時（日付）
-  published_time: 9 # 情報の発表日時（時間）
-  target_date: 10   # 情報の公開開始日時(日付)
-  target_time: 11   # 情報の公開開始日時(時間)
-  valid_date: 12    # 情報の公開終了日時(日付)
-  valid_time: 13    # 情報の公開終了日時(時間)
-  type_update: 25   # 更新種別
+  corrected: 2            # 情報の取消時又は訂正時の説明文
+  summary: 4              # 見出し文(要約)
+  published_date: 8       # 情報の発表日時（日付）
+  published_time: 9       # 情報の発表日時（時間）
+  target_date: 10         # 情報の公開開始日時(日付)
+  target_time: 11         # 情報の公開開始日時(時間)
+  valid_date: 12          # 情報の公開終了日時(日付)
+  valid_time: 13          # 情報の公開終了日時(時間)
+  info_classification: 14 # 情報の識別区分
+  type_update: 25         # 更新種別
+  comp_info: 5            # 補足情報
 
 # 災害訓練モードプロジェクトID
 training_prj:
